# crew-content-creator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  draft_article.md  final_article.md  pyproject.toml
src/tech_new_writer/: AGENTS.md  api.py  crew.py  env_loader.py  forem_publisher.py  main.py  service.py  session_workspace.py  skills.py  source_fetcher.py
src/tech_new_writer/config/: agents.yaml  tasks.yaml
src/tech_new_writer/legacy/: blogger_publisher.py
src/tech_new_writer/skills/content_writer/: SKILL.md
src/tech_new_writer/skills/trend_researcher/: SKILLS.md
