[project]
name = "tech_new_writer"
version = "0.1.0"
description = "tech-new-writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0"
]

[project.scripts]
tech_new_writer = "tech_new_writer.main:run"
run_crew = "tech_new_writer.main:run"
train = "tech_new_writer.main:train"
replay = "tech_new_writer.main:replay"
test = "tech_new_writer.main:test"
run_with_trigger = "tech_new_writer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
