[project]
name = "tech_new_writer"
version = "0.1.0"
description = "tech-new-writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0",
    "fastapi",
    "markdown",
    "python-dotenv",
    "requests",
    "uvicorn",
]

[project.scripts]
run_api = "tech_new_writer.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
